feat: Implementacion completa del sincronizador PS a PS
- Conexion con API de PrestaShop remoto via webservice
- Soporte para dominios internos con resolucion IP personalizada
- Listado de productos remotos con paginacion y filtros
- Seleccion multiple de productos con checkboxes
- Importacion completa: datos, imagenes, caracteristicas, atributos
- Interfaz moderna con Material Design
- Manejo robusto de errores y validaciones
- Guia de uso completa

Nuevos archivos:
- src/Service/PrestaShopApiService.php
- src/Service/ProductImporterService.php
- autoload.php con PSR-4
- vendor/autoload.php
- GUIA_DE_USO.md

Correcciones:
- Fix resolucion DNS para dominios internos con CURLOPT_RESOLVE
- Fix compatibilidad con formatos de nombre array/string
- Migrado routes.yaml a routes.yml
- Mejorado manejo de errores cURL

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,29 @@
 {
-  "name": "prestashop/sync_ps_to_ps_importer",
+  "name": "atech/sync-ps-to-ps-importer",
+  "description": "Módulo para sincronizar productos entre dos tiendas PrestaShop",
+  "type": "prestashop-module",
+  "license": "AFL-3.0",
+  "authors": [
+    {
+      "name": "Atech"
+    }
+  ],
+  "require": {
+    "php": ">=7.2.0"
+  },
   "autoload": {
     "psr-4": {
       "SyncPsToPsImporter\\": "src/"
-    }
+    },
+    "classmap": [
+      "sync_ps_to_ps_importer.php"
+    ],
+    "files": [
+      "autoload.php"
+    ]
   },
   "config": {
-    "prepend-autoloader": false
-  },
-  "type": "prestashop-module"
+    "prepend-autoloader": false,
+    "sort-packages": true
+  }
 }
